# Esp32_Grp_chat

./: LICENSE  README.md  build_system.md  led_blink.md  sdkconfig  sdkconfig.old
PROJECT_DEMO/: CMakeLists.txt  sdkconfig  sdkconfig.old
PROJECT_DEMO/components/: CMakeLists.txt  data_transfer.h  mesh_main.c  mesh_new.h
PROJECT_DEMO/main/: CMakeLists.txt  main.c  mesh_new.h
PROJECT_DEMO2/components/: mesh_main.c
PROJECT_DEMO2/main/: main.c
Resources/: esp32_mesh_term.md  hello world.docx  hello_world.docx  hello_world.md
Working_project/: CMakeLists.txt  sdkconfig.old
Working_project/components/: CMakeLists.txt  mesh_main.c  sdkconfig.old
Working_project/main/: main.c
components/: mesh_main.c
main/: CMakeLists.txt  data_transfer.h  main.c  mesh_new.h
